--- a/tox.ini
+++ b/tox.ini
@@ -14,9 +14,10 @@ python_files = test_*.py
 setenv =
     PYTHONPATH = {toxinidir}:{toxinidir}
 commands =
-    coverage run -p --source rmoq -m py.test
+    coverage run -p --source thumbnails -m py.test
 deps =
     pytest
+    pillow
     coverage
     mock
     django16: Django>=1.6,<1.7
