Add SourceFile object

--- a/tox.ini
+++ b/tox.ini
@@ -14,10 +14,12 @@ python_files = test_*.py
 setenv =
     PYTHONPATH = {toxinidir}:{toxinidir}
 commands =
-    coverage run -p --source thumbnails -m py.test
+    coverage run -p --source thumbnails -m py.test -v
 deps =
     pytest
     pillow
+    six
+    requests
     coverage
     mock
     django16: Django>=1.6,<1.7
