--- a/tox.ini
+++ b/tox.ini
@@ -1,6 +1,7 @@
 [tox]
 envlist =
     {py27,py34}
+    {py27,py34}-{django17}
 skipsdist = True
 
 [flake8]
@@ -13,6 +14,7 @@ python_files = test_*.py
 [testenv]
 setenv =
     PYTHONPATH = {toxinidir}:{toxinidir}
+    DJANGO_SETTINGS_MODULE = tests.django_settings
 commands =
     coverage run -p --source thumbnails -m py.test -v
 deps =
