--- a/.frigg.yml
+++ b/.frigg.yml
@@ -1,6 +1,8 @@
 tasks:
  - tox -e py34
  - tox -e py27
+ - tox -e py27-django17
+ - tox -e py34-django17
  - flake8
  - isort -rc -c thumbnails tests
  - coverage combine && coverage report && coverage xml
