Add docs build as tox test

--- a/tox.ini
+++ b/tox.ini
@@ -1,7 +1,8 @@
 [tox]
 envlist =
     {py27,py34},
-    {py27,py34}-{django17}
+    {py27,py34}-{django17},
+    py34-docs
 skipsdist = True
 
 [flake8]
@@ -15,8 +16,12 @@ python_files = test_*.py
 setenv =
     PYTHONPATH = {toxinidir}:{toxinidir}
     DJANGO_SETTINGS_MODULE = tests.django_settings
+    docs: PYTHONPATH = {toxinidir}:{toxinidir}/docs
+changedir =
+    docs: docs
 commands =
     coverage run -p --source thumbnails -m py.test -v
+    docs: sphinx-build -T -b html -d {envtmpdir}/_build/doctrees . {envtmpdir}/_build/html
 deps =
     pytest
     pillow
@@ -27,3 +32,4 @@ deps =
     django16: Django>=1.6,<1.7
     django17: Django>=1.7,<1.8
     django18: https://www.djangoproject.com/download/1.8a1/tarball/
+    docs: -r{toxinidir}/docs/requirements.txt
