--- a/.frigg.yml
+++ b/.frigg.yml
@@ -6,6 +6,7 @@ tasks:
  - flake8
  - isort -rc -c thumbnails tests
  - coverage combine && coverage report && coverage xml
+ - tox -e docs
 
 coverage:
   path: coverage.xml
