--- a/tox.ini
+++ b/tox.ini
@@ -1,7 +1,7 @@
 [tox]
 envlist =
     {py27,py34},
-    {py27,py34}-{django17},
+    {py27,py34}-{django17,django18},
     py34-docs
 skipsdist = True
 
@@ -31,5 +31,5 @@ deps =
     mock
     django16: Django>=1.6,<1.7
     django17: Django>=1.7,<1.8
-    django18: https://www.djangoproject.com/download/1.8a1/tarball/
+    django18: Django==1.8c1
     docs: -r{toxinidir}/docs/requirements.txt
