Fix tox config, only run docs build in docs env

--- a/tox.ini
+++ b/tox.ini
@@ -21,7 +21,6 @@ changedir =
     docs: docs
 commands =
     coverage run -p --source thumbnails -m py.test -v
-    docs: sphinx-build -T -b html -d {envtmpdir}/_build/doctrees . {envtmpdir}/_build/html
 deps =
     pytest
     pillow
@@ -33,3 +32,6 @@ deps =
     django17: Django>=1.7,<1.8
     django18: Django==1.8c1
     docs: -r{toxinidir}/docs/requirements.txt
+
+[testenv:py34-docs]
+commands = sphinx-build -T -b html -d {envtmpdir}/_build/doctrees . {envtmpdir}/_build/html
