--- a/tox.ini
+++ b/tox.ini
@@ -1,7 +1,7 @@
 [tox]
 envlist =
     {py27,py34},
-    {py27,py34}-{django17,django18},
+    {py27,py34}-{django17,django18,redis},
     py34-docs
 skipsdist = True
 
@@ -31,6 +31,7 @@ deps =
     django16: Django>=1.6,<1.7
     django17: Django>=1.7,<1.8
     django18: Django==1.8c1
+    redis: redis
     docs: -r{toxinidir}/docs/requirements.txt
 
 [testenv:py34-docs]
