Add wand engine
Fixes #4

--- a/tox.ini
+++ b/tox.ini
@@ -1,6 +1,6 @@
 [tox]
 envlist =
-    {py27,py34},
+    {py27,py34}-{pillow,wand},
     {py27,py34}-{django17,django18,redis},
     py34-docs
 skipsdist = True
@@ -32,6 +32,7 @@ deps =
     django17: Django>=1.7,<1.8
     django18: Django==1.8c1
     redis: redis
+    wand: wand
     docs: -r{toxinidir}/docs/requirements.txt
 
 [testenv:py34-docs]
