--- a/.frigg.yml
+++ b/.frigg.yml
@@ -1,10 +1,12 @@
 tasks:
  - tox -e py34
  - tox -e py27
- - tox -e py27-django17
  - tox -e py34-django17
- - tox -e py27-django18
+ - tox -e py27-django17
  - tox -e py34-django18
+ - tox -e py27-django18
+ - tox -e py34-redis
+ - tox -e py27-redis
  - flake8
  - isort -rc -c thumbnails tests
  - coverage combine && coverage report && coverage xml
