--- a/tox.ini
+++ b/tox.ini
@@ -10,7 +10,7 @@ max_line_length=100
 exclude=.tox, venv
 
 [pytest]
-python_files = test_*.py
+python_files = tests/test_*.py
 
 [testenv]
 setenv =
