Add pgmagick engine
Fix #3

--- a/tox.ini
+++ b/tox.ini
@@ -1,6 +1,6 @@
 [tox]
 envlist =
-    {py27,py34}-{pillow,wand},
+    {py27,py34}-{pillow,wand,pgmagick},
     {py27,py34}-{django17,django18,redis},
     py34-docs
 skipsdist = True
@@ -33,6 +33,7 @@ deps =
     django18: Django==1.8c1
     redis: redis
     wand: wand
+    pgmagick: pgmagick
     docs: -r{toxinidir}/docs/requirements.txt
 
 [testenv:py34-docs]
