Fix dependencies of tox env for docs

--- a/tox.ini
+++ b/tox.ini
@@ -34,7 +34,7 @@ deps =
     redis: redis
     wand: wand
     pgmagick: pgmagick
-    docs: -r{toxinidir}/docs/requirements.txt
 
 [testenv:py34-docs]
 commands = sphinx-build -T -b html -d {envtmpdir}/_build/doctrees . {envtmpdir}/_build/html
+deps = -r{toxinidir}/docs/requirements.txt
