--- a/tox.ini
+++ b/tox.ini
@@ -29,8 +29,11 @@ deps =
     coverage
     mock
     django16: Django>=1.6,<1.7
+    django16: pytest-django
     django17: Django>=1.7,<1.8
+    django17: pytest-django
     django18: Django==1.8c1
+    django18: pytest-django
     redis: redis
     wand: wand
     pgmagick: pgmagick
