Update to release version of django 1.8 in tox

--- a/tox.ini
+++ b/tox.ini
@@ -32,7 +32,7 @@ deps =
     django16: pytest-django
     django17: Django>=1.7,<1.8
     django17: pytest-django
-    django18: Django==1.8c1
+    django18: Django>=1.8,<1.9
     django18: pytest-django
     redis: redis
     wand: wand
