Add pinning of version numbers

--- a/tox.ini
+++ b/tox.ini
@@ -22,12 +22,7 @@ changedir =
 commands =
     coverage run -p --source thumbnails -m py.test -v
 deps =
-    pytest
-    pillow
-    six
-    requests
-    coverage
-    mock
+    -r{toxinidir}/requirements.txt
     django16: Django>=1.6,<1.7
     django16: pytest-django
     django17: Django>=1.7,<1.8
