--- a/tox.ini
+++ b/tox.ini
@@ -1,7 +1,7 @@
 [tox]
 envlist =
-    {py27,py34}-{pillow,wand,pgmagick},
-    {py27,py34}-{django17,django18,redis},
+    {py34}-{pillow,wand,pgmagick},
+    {py34}-{django17,django18,redis},
     py34-docs
 skipsdist = True
 
