--- a/setup.cfg
+++ b/setup.cfg
@@ -13,3 +13,6 @@ line_length = 100
 skip = .tox,venv
 default_section = THIRDPARTY
 known_first_party = thumbnails,tests
+
+[semantic_release]
+version_variable = thumbnails/__init__.py:__version__
