Fix frigg settings

--- a/.frigg.yml
+++ b/.frigg.yml
@@ -1,12 +1,12 @@
 tasks:
+ - tox -e flake8
+ - tox -e isort
  - tox -e py34-pillow
  - tox -e py34-django17
  - tox -e py34-django18
  - tox -e py34-redis
- - flake8
- - isort -rc -c thumbnails tests
  - coverage combine && coverage report && coverage xml
- - tox -e py34-docs
+ - tox -e docs
 
 services:
  - redis-server
