--- a/tox.ini
+++ b/tox.ini
@@ -1,8 +1,9 @@
 [tox]
 envlist =
+    flake8,isort,
     {py34}-{pillow,wand,pgmagick},
     {py34}-{django17,django18,redis},
-    py34-docs
+    docs
 skipsdist = True
 
 [testenv]
@@ -26,6 +27,17 @@ deps =
     wand: wand
     pgmagick: pgmagick
 
-[testenv:py34-docs]
+[testenv:docs]
+basepython = python3.4
 commands = sphinx-build -T -b html -d {envtmpdir}/_build/doctrees . {envtmpdir}/_build/html
 deps = -r{toxinidir}/docs/requirements.txt
+
+[testenv:flake8]
+basepython = python3.4
+deps = flake8
+commands = flake8
+
+[testenv:isort]
+basepython = python3.4
+deps = isort
+commands = isort -c -rc thumbnails tests
