--- a/tox.ini
+++ b/tox.ini
@@ -1,18 +1,17 @@
 [tox]
 envlist =
     flake8,isort,
-    {py34}-{pillow,wand,pgmagick},
-    {py34}-{django17,django18,redis},
+    pillow,wand,pgmagick,
+    django17,django18,redis,
+    coverage-report,
     docs
 skipsdist = True
 
 [testenv]
+basepython = python3
 setenv =
     PYTHONPATH = {toxinidir}:{toxinidir}
     DJANGO_SETTINGS_MODULE = tests.django_settings
-    docs: PYTHONPATH = {toxinidir}:{toxinidir}/docs
-changedir =
-    docs: docs
 commands =
     coverage run -p --source thumbnails -m py.test -v
 deps =
@@ -23,21 +22,28 @@ deps =
     django17: pytest-django
     django18: Django>=1.8,<1.9
     django18: pytest-django
+    django19: Django>=1.9,<1.10
+    django19: pytest-django
     redis: redis
     wand: wand
     pgmagick: pgmagick
+    coverage-report: coverage
 
 [testenv:docs]
-basepython = python3.4
+setenv =
+    PYTHONPATH = {toxinidir}:{toxinidir}/docs
+changedir = docs
 commands = sphinx-build -T -b html -d {envtmpdir}/_build/doctrees . {envtmpdir}/_build/html
 deps = -r{toxinidir}/docs/requirements.txt
 
 [testenv:flake8]
-basepython = python3.4
 deps = flake8
 commands = flake8
 
 [testenv:isort]
-basepython = python3.4
 deps = isort
 commands = isort -c -rc thumbnails tests
+
+[testenv:coverage-report]
+deps = isort
+commands = coverage combine && coverage report && coverage xml
