chore: Add semantic-release in travis config

--- a/.travis.yml
+++ b/.travis.yml
@@ -22,5 +22,11 @@ install:
 script:
  - tox
 
+after_success:
+ - git config --global user.name "semantic-release"
+ - git config --global user.email "semantic-release@travis"
+ - pip install python-semantic-release
+ - semantic-release publish
+
 
 
