test: Drop tests for django 1.6 and django 1.7

--- a/tox.ini
+++ b/tox.ini
@@ -16,10 +16,6 @@ commands =
     coverage run -p --source thumbnails -m py.test -v
 deps =
     -r{toxinidir}/requirements.txt
-    django16: Django>=1.6,<1.7
-    django16: pytest-django
-    django17: Django>=1.7,<1.8
-    django17: pytest-django
     django18: Django>=1.8,<1.9
     django18: pytest-django
     django19: Django>=1.9,<1.10
@@ -27,7 +23,6 @@ deps =
     redis: redis
     wand: wand
     pgmagick: pgmagick
-    coverage-report: coverage
 
 [testenv:docs]
 setenv =
@@ -45,5 +40,5 @@ deps = isort
 commands = isort -c -rc thumbnails tests
 
 [testenv:coverage-report]
-deps = isort
+deps = coverage
 commands = coverage combine && coverage report && coverage xml
