Run tests on circleci with python3.5, run django 1.10 tests

--- a/tox.ini
+++ b/tox.ini
@@ -2,7 +2,8 @@
 envlist =
     flake8,isort,
     pillow,wand,pgmagick,
-    django17,django18,redis,
+    django18,django19,django110,
+    redis,
     coverage-report,
     docs
 skipsdist = True
@@ -20,6 +21,8 @@ deps =
     django18: pytest-django
     django19: Django>=1.9,<1.10
     django19: pytest-django
+    django110: Django>=1.10,<1.11
+    django110: pytest-django
     redis: redis
     wand: wand
     pgmagick: pgmagick
