chore: Fix config for coverage-report

--- a/tox.ini
+++ b/tox.ini
@@ -41,4 +41,7 @@ commands = isort -c -rc thumbnails tests
 
 [testenv:coverage-report]
 deps = coverage
-commands = coverage combine && coverage report && coverage xml
+commands =
+    coverage combine
+    coverage report
+    coverage xml
