chore: Add -e to tox commands on travis

--- a/.travis.yml
+++ b/.travis.yml
@@ -22,14 +22,14 @@ install:
 
 script:
  - set -o pipefail
- - tox flake8 | hide-env GH_TOKEN PYPI_PASSWORD
- - tox isort | hide-env GH_TOKEN PYPI_PASSWORD
- - tox pillow | hide-env GH_TOKEN PYPI_PASSWORD
- - tox django111 | hide-env GH_TOKEN PYPI_PASSWORD
- - tox django18 | hide-env GH_TOKEN PYPI_PASSWORD
- - tox redis | hide-env GH_TOKEN PYPI_PASSWORD
- - tox coverage-report | hide-env GH_TOKEN PYPI_PASSWORD
- - tox docs | hide-env GH_TOKEN PYPI_PASSWORD
+ - tox -e flake8 | hide-env GH_TOKEN PYPI_PASSWORD
+ - tox -e isort | hide-env GH_TOKEN PYPI_PASSWORD
+ - tox -e pillow | hide-env GH_TOKEN PYPI_PASSWORD
+ - tox -e django111 | hide-env GH_TOKEN PYPI_PASSWORD
+ - tox -e django18 | hide-env GH_TOKEN PYPI_PASSWORD
+ - tox -e redis | hide-env GH_TOKEN PYPI_PASSWORD
+ - tox -e coverage-report | hide-env GH_TOKEN PYPI_PASSWORD
+ - tox -e docs | hide-env GH_TOKEN PYPI_PASSWORD
 
 after_success:
  - codecov
